tests/e2e/try_scope_invalid.story
try
  a = 0
catch
  b = 42

a += 1
